audit_summary_for_notepad.txt
Audit summary reconstructed: 2025-11-17T00:08:55.6334484+11:00
Project run_id: run_20251116T210003_2A
Run dir: C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\run_20251116T210003_2A

promotion_gate_summary.json: MISSING

preds_model.json: MISSING

--- LOG TAIL (last 200 lines) ---
=== CAPTURE START: 2025-11-16T21:32:46.9705072+11:00 ===
--- INPUT FILES ---
FOUND: C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\retired\hoxnc_training.preprocessed.csv  size=199894  modified=16/11/2025 9:31:36 PM
FOUND: C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\retired\hoxnc_validation.csv  size=8035  modified=16/11/2025 5:33:32 PM
FOUND: C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\run_20251116T210003_2A\run_promotion_gate_with_train.py  size=3628  modified=16/11/2025 9:31:46 PM
--- PYTHON INFO ---
Python 3.13.9
C:\Users\loweb\AI_Financial_Sims\PyLibs\Scripts\python.exe
3.13.9 (tags/v3.13.9:8183fa5, Oct 14 2025, 14:09:13) [MSC v.1944 64 bit (AMD64)]
--- KEY PACKAGES ---
  File "<string>", line 6
    out.append(f'{p} {getattr(m,\
                             ^
SyntaxError: '(' was never closed
--- RUNNING PYTHON GATE SCRIPT ---
Traceback (most recent call last):
  File "C:\Users\loweb\AI_Financial_Sims\PyLibs\Lib\site-packages\pandas\core\indexes\base.py", line 3812, in get_loc
    return self._engine.get_loc(casted_key)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^
  File "pandas/_libs/index.pyx", line 167, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/index.pyx", line 196, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/hashtable_class_helper.pxi", line 7088, in pandas._libs.hashtable.PyObjectHashTable.get_item
  File "pandas/_libs/hashtable_class_helper.pxi", line 7096, in pandas._libs.hashtable.PyObjectHashTable.get_item
KeyError: 'Date_dow'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\run_20251116T210003_2A\run_promotion_gate_with_train.py", line 31, in <module>
    Xte, yte = prepare_xy(test, target_col)
               ~~~~~~~~~~^^^^^^^^^^^^^^^^^^
  File "C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\run_20251116T210003_2A\run_promotion_gate_with_train.py", line 28, in prepare_xy
    y = df[target].values
        ~~^^^^^^^^
  File "C:\Users\loweb\AI_Financial_Sims\PyLibs\Lib\site-packages\pandas\core\frame.py", line 4113, in __getitem__
    indexer = self.columns.get_loc(key)
  File "C:\Users\loweb\AI_Financial_Sims\PyLibs\Lib\site-packages\pandas\core\indexes\base.py", line 3819, in get_loc
    raise KeyError(key) from err
KeyError: 'Date_dow'
PYTHON_EXIT_CODE: 1
GATE_REPAIR_FAILED: see log C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\run_20251116T210003_2A\promotion_gate_repair_run.log

--- SCRIPT APPENDED: 2025-11-17T12:24:35.9085024+11:00 ---

<PLACEHOLDER: full script content is here — this block itself>

--- SCRIPT APPENDED (ALT): 2025-11-17T12:27:00.5633632+11:00 ---

<ALTERNATIVE: numeric-only intersection runner>

--- SCRIPT APPENDED (NUMERIC-ONLY EXECUTION): 2025-11-17T12:28:02.9860513+11:00 ---

<NUMERIC-ONLY PATCHED RUNNER EXECUTION>

--- SCRIPT APPENDED (SYNTHETIC FORECAST): 2025-11-17T12:36:10.8754742+11:00 ---

<SYNTHETIC FORECAST TEST RUNNER>

--- SYNTHETIC SUMMARY JSON ---
{
  "run_id": "synthetic_forecast_test_20251117",
  "synthetic": true,
  "n_features": 6,
  "rows_train": 500,
  "rows_test": 120,
  "r2_real": 0.9617186694778723,
  "feature_columns": [
    "F1",
    "F2",
    "F3",
    "F4",
    "F5",
    "F6"
  ]
}

--- SYNTHETIC PREDS (first 20 lines) ---
[{"pred":-2.9540622189},{"pred":-1.4201438069},{"pred":-1.2249306536},{"pred":2.634652723},{"pred":-2.3559934682},{"pred":-2.4580040938},{"pred":-1.5495535644},{"pred":-3.8418745278},{"pred":1.923957679},{"pred":7.3350135138},{"pred":-1.3750639523},{"pred":-1.9403440216},{"pred":-1.8085104991},{"pred":-0.8250507761},{"pred":0.0971268339},{"pred":-3.7548841411},{"pred":-5.4132589125},{"pred":-0.4289376916},{"pred":-1.2062012965},{"pred":-1.3098230346},{"pred":-1.0551098329},{"pred":-1.6284382318},{"pred":2.5950973869},{"pred":2.9460316778},{"pred":5.1054484535},{"pred":-4.0243081701},{"pred":4.3017403412},{"pred":-0.4929831519},{"pred":2.9224351701},{"pred":0.5705819138},{"pred":-2.4987736665},{"pred":-1.9033149767},{"pred":3.4152626542},{"pred":-1.8759279562},{"pred":-1.4240158528},{"pred":-4.2356190732},{"pred":5.8917295164},{"pred":1.0518004791},{"pred":-4.9162453987},{"pred":0.2918373246},{"pred":4.0541345619},{"pred":4.8783404836},{"pred":-1.8651152006},{"pred":-2.1428274277},{"pred":-2.2969320515},{"pred":1.490435267},{"pred":-6.6221990936},{"pred":-2.4730973371},{"pred":5.3527315796},{"pred":2.3593597755},{"pred":-1.8686871838},{"pred":0.5292457755},{"pred":3.7166548727},{"pred":0.4753396257},{"pred":4.5681284309},{"pred":5.2354695459},{"pred":-1.1350465277},{"pred":1.8505131133},{"pred":-3.0294074201},{"pred":0.6829090424},{"pred":3.1102180548},{"pred":-1.4259454037},{"pred":-1.318078906},{"pred":-0.1477382158},{"pred":-0.5155492282},{"pred":4.4777553779},{"pred":-2.8835874596},{"pred":0.4929908423},{"pred":3.101329882},{"pred":1.6861116055},{"pred":4.2786732511},{"pred":1.6449207133},{"pred":-0.2173587847},{"pred":0.4824461923},{"pred":6.4022509929},{"pred":-1.6077425953},{"pred":4.7376427888},{"pred":4.2975034395},{"pred":-0.6741450267},{"pred":3.3912956483},{"pred":-2.4956929072},{"pred":-1.8090686262},{"pred":-1.9100737556},{"pred":-4.5498837993},{"pred":4.9510444727},{"pred":-0.0052938387},{"pred":-0.5796395369},{"pred":-2.4906624653},{"pred":1.1779168695},{"pred":-0.2628634169},{"pred":-2.2675078184},{"pred":-1.5510743728},{"pred":-0.6275722203},{"pred":-3.2491824951},{"pred":-3.4563455736},{"pred":-1.2372412603},{"pred":-0.8524562615},{"pred":4.1564914605},{"pred":4.6993227614},{"pred":-1.8370557646},{"pred":-1.7500028212},{"pred":-0.952262807},{"pred":-0.0306826448},{"pred":-4.0531968686},{"pred":0.3925808228},{"pred":2.5179715013},{"pred":1.1817933452},{"pred":0.7580476394},{"pred":1.471969063},{"pred":1.6056794811},{"pred":-1.5068536128},{"pred":3.2614255966},{"pred":3.6509815061},{"pred":2.6750732864},{"pred":-0.7734187373},{"pred":-1.4253688702},{"pred":-5.3426009196},{"pred":0.9033938098},{"pred":0.9717444755},{"pred":-0.0814514944}]

--- SCRIPT APPENDED (RANDOM DATA TEST): 2025-11-17T12:40:27.9882094+11:00 ---


PROMOTE: train_phase2b2_HO.1B.py promoted to canonical; script_sha 1b19359f619c519d4ad4611e1a6dfcad40209a5df2989c6d939e549df89a07ce; run_manifest updated at C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\ho_artifact_outputs\run_20251118_121954\run_manifest.run_20251118_121954.patched.json; manifest_sha 77d833d9c9f48a5aeeb2445c2e8b8bd92365a5a584474a72b18a6c15784f1c0b; tag audit/run_20251118_121954-promote pushed.
